--- a/.github/workflows/UpdateSprint.yml
+++ b/.github/workflows/UpdateSprint.yml
@@ -37,16 +37,12 @@ jobs:
           echo "Issue type is neither 'Bug' nor 'Story'. Stopping workflow."
           exit 0
 
-      - name: Get Sprint field id by name and parent Sprint value (with debug)
-        id: parent_sprint
+      - name: Get Sprint field id by name
+        id: sprint_field
         env:
           GH_TOKEN: ${{ secrets.milestone_sync }}
         run: |
-          set -e
           PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
-          issue_node_id="${{ github.event.issue.node_id }}"
-
-          # Get Sprint field id by name
           sprint_field_id=$(
             gh api graphql -f query='
               query($project: ID!) {
@@ -63,16 +59,17 @@ jobs:
               }
             ' -F project="$PROJECT_NODE_ID" | jq -r '.data.node.fields.nodes[] | select(.name == "Sprint") | .id // empty'
           )
+          echo "sprint_field_id=$sprint_field_id" >> $GITHUB_OUTPUT
 
-          if [ -z "$sprint_field_id" ]; then
-            echo "No Sprint field found in project, skipping."
-            echo "sprint_field_id=" >> $GITHUB_OUTPUT
-            echo "parent_sprint_id=" >> $GITHUB_OUTPUT
-            echo "parent_sprint_name=" >> $GITHUB_OUTPUT
-            exit 0
-          fi
+      - name: Get parent Sprint value (iterationId and title)
+        id: parent_sprint
+        env:
+          GH_TOKEN: ${{ secrets.milestone_sync }}
+        run: |
+          set -e
+          PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
+          issue_node_id="${{ github.event.issue.node_id }}"
 
-          # Get all project items for this issue
           parent_items=$(gh api graphql -f query='
             query($id: ID!) {
               node(id: $id) {
@@ -83,7 +80,6 @@ jobs:
                       fieldValues(first: 20) {
                         nodes {
                           ... on ProjectV2ItemFieldIterationValue {
-                            field { name }
                             iterationId
                             title
                           }
@@ -105,25 +101,21 @@ jobs:
             exit 0
           fi
 
-          # Get the parent Sprint id and name (title)
+          # Get the first non-empty iterationId+title for this project (Sprint)
           parent_sprint_id=$(echo "$parent_items" | jq -r --arg proj "$PROJECT_NODE_ID" '
             .data.node.projectItems.nodes[] | select(.project.id == $proj) |
-              .fieldValues.nodes[]? | select(.field.name == "Sprint") | .iterationId // empty
-          ')
+              .fieldValues.nodes[]? | select(.iterationId != null) | .iterationId' | head -n1)
           parent_sprint_name=$(echo "$parent_items" | jq -r --arg proj "$PROJECT_NODE_ID" '
             .data.node.projectItems.nodes[] | select(.project.id == $proj) |
-              .fieldValues.nodes[]? | select(.field.name == "Sprint") | .title // empty
-          ')
+              .fieldValues.nodes[]? | select(.iterationId != null) | .title' | head -n1)
 
           echo "Sprint debug info for triggering issue:"
-          echo "  Sprint field id: $sprint_field_id"
           echo "  Parent Sprint id (iterationId): $parent_sprint_id"
           echo "  Parent Sprint name (title): $parent_sprint_name"
           if [ -z "$parent_sprint_id" ]; then
             echo "  Parent issue does NOT have a Sprint set."
           fi
 
-          echo "sprint_field_id=$sprint_field_id" >> $GITHUB_OUTPUT
           echo "parent_sprint_id=$parent_sprint_id" >> $GITHUB_OUTPUT
           echo "parent_sprint_name=$parent_sprint_name" >> $GITHUB_OUTPUT
 
@@ -178,7 +170,7 @@ jobs:
           GH_TOKEN: ${{ secrets.milestone_sync }}
         run: |
           numbers=${{ steps.subissues.outputs.numbers }}
-          SPRINT_FIELD_ID="${{ steps.parent_sprint.outputs.sprint_field_id }}"
+          SPRINT_FIELD_ID="${{ steps.sprint_field.outputs.sprint_field_id }}"
           PARENT_SPRINT_ID="${{ steps.parent_sprint.outputs.parent_sprint_id }}"
           PARENT_SPRINT_NAME="${{ steps.parent_sprint.outputs.parent_sprint_name }}"
           PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
